# 369

./: .env.example  .gitignore  README.md  docker-compose.edge.yml  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py
agents/awareness/: agent.py  config.yaml
agents/compost/: agent.py  config.yaml  rules.py
agents/irrigation/: agent.py  config.yaml  rules.py
agents/soil/: agent.py  config.yaml  rules.py
agents/weather/: agent.py  config.yaml
api/: __init__.py  main.py  websocket.py
api/routes/: __init__.py  agents.py  insights.py  sensors.py  traces.py
config/: backyard.yaml  small-garden.yaml  village.yaml
core/: __init__.py  agent.py  bulletin.py  config.py  hal.py  models.py  scheduler.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: AgentPanel.jsx  AlertsPanel.jsx  BriefingCard.jsx  Header.jsx  TracesFeed.jsx  WeatherWidget.jsx  ZoneCard.jsx
docs/: adding-an-agent.md  architecture.md  deployment.md  hardware-guide.md
hal/: __init__.py  device_registry.py
hal/adapters/: __init__.py  gpio.py  http.py  mock.py  mqtt.py
tests/: __init__.py  test_agent.py  test_bulletin.py  test_hal.py
